@@ -1,8 +1,11 @@
 package rbasamoyai.createbigcannons.cannon_control;
 
+import javax.annotation.Nullable;
+
 import com.simibubi.create.content.contraptions.AbstractContraptionEntity;
 
 import net.minecraft.core.BlockPos;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.phys.Vec3;
 import rbasamoyai.createbigcannons.cannon_control.contraption.PitchOrientedContraptionEntity;
@@ -20,6 +23,8 @@ public interface ControlPitchContraption {
 	BlockPos getDismountPositionForContraption(PitchOrientedContraptionEntity poce);
 
 	BlockState getControllerState();
+
+	@Nullable default ResourceLocation getTypeId() { return null; }
 
 	default void onRecoil(Vec3 vector, AbstractContraptionEntity cannon) {
 	}
