@@ -17,12 +17,12 @@ import net.minecraft.nbt.FloatTag;
 import net.minecraft.nbt.ListTag;
 import net.minecraft.nbt.Tag;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.TranslatableComponent;
 import net.minecraft.network.protocol.Packet;
 import net.minecraft.network.protocol.game.ClientboundAddEntityPacket;
 import net.minecraft.network.syncher.EntityDataAccessor;
 import net.minecraft.network.syncher.EntityDataSerializers;
 import net.minecraft.network.syncher.SynchedEntityData;
+import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.sounds.SoundEvents;
 import net.minecraft.sounds.SoundSource;
@@ -96,6 +96,10 @@ public class CannonCarriageEntity extends Entity implements ControlPitchContrapt
 		return CBCBlocks.CANNON_CARRIAGE.getDefaultState();
 	}
 
+	@Nullable
+	@Override
+	public ResourceLocation getTypeId() { return CreateBigCannons.resource("cannon_carriage"); }
+
 	@Override
 	protected void defineSynchedData() {
 		this.entityData.define(DATA_ID_HURT, 0);
@@ -144,14 +148,6 @@ public class CannonCarriageEntity extends Entity implements ControlPitchContrapt
 		} else {
 			this.setDeltaMovement(Vec3.ZERO);
 		}
-
-		if (!this.level.isClientSide
-			&& this.getControllingPassenger() instanceof Player player
-			&& this.cannonContraption != null
-			&& this.cannonContraption.getContraption() instanceof MountedAutocannonContraption) {
-			player.displayClientMessage(new TranslatableComponent("block." + CreateBigCannons.MOD_ID + ".cannon_carriage.hotbar.fireRate", this.getActualFireRate()), true);
-		}
-
 		this.applyRotation();
 	}
 
@@ -356,12 +352,6 @@ public class CannonCarriageEntity extends Entity implements ControlPitchContrapt
 	public void trySettingFireRateCarriage(int fireRateAdjustment) {
 		if (!this.level.isClientSide && this.cannonContraption != null && this.cannonContraption.getContraption() instanceof MountedAutocannonContraption autocannon)
 			autocannon.trySettingFireRateCarriage(fireRateAdjustment);
-	}
-
-	public int getActualFireRate() {
-		return this.cannonContraption != null && this.cannonContraption.getContraption() instanceof MountedAutocannonContraption autocannon
-			? autocannon.getReferencedFireRate()
-			: 0;
 	}
 
 	@Override
